--- a/client/package.json
+++ b/client/package.json
@@ -17,9 +17,11 @@
     "react-scripts": "2.1.1"
   },
   "scripts": {
-    "start": "dotenv -e .env.prod react-scripts start",
+    "start": "react-scripts start",
+    "build-dev": "dotenv -e .env.development react-scripts build",
+    "build-prod": "dotenv -e .env.production react-scripts build",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
