--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "dotenv": "^6.2.0",
     "google-maps-react": "^2.0.2",
     "react": "^16.6.3",
     "react-bootstrap": "^0.32.4",
@@ -23,7 +24,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-},
+  },
   "eslintConfig": {
     "extends": "react-app"
   },
